# GMA

./: .gitignore  New  README.md  main.py  realseance.py  realsense_recorder.py  recorder.py  recorder_controller.py  requirements.txt  run_with_frontend.py  run_without_frontend.py  sync_multicam_capture.py  t.py  test.py  view_recordings.py
Frontend/: GMA UI DESIGN REQUIREMENTS.md  main.py  ui_main_window.py  ui_theme.py
Frontend/pages/: add_patient_page.py  dashboard_page.py  patients_page.py  profile_page.py  record_page.py  uploads_page.py
Frontend/widgets/: avatar_widget.py  filter_chips.py  header_widget.py  hospital_card.py  patient_table.py  recording_checklist_dialog.py  search_bar.py  stats_card.py  upload_card.py  user_info_card.py
Recordings/Cameras/: Cam_Sim1.py  Cam_Sim2.py
Recordings/session_20260305_145422/: cam1.avi  cam2.avi
Recordings/session_20260309_123530/: cam2_idx1.avi
cameras/: camera.py  camera_utils.py  device_manager.py  realsense.py  realsense_camera.py  webcam.py
native/: CMakeLists.txt
native/include/: dual_camera_recorder.hpp  frame_packet.hpp  ring_buffer.hpp
native/src/: dual_camera_recorder.cpp  main.cpp
